# EasyScience

./: .buildinfo  .copier-answers.yml  .coveragerc  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: index.doctree  sg_execution_times.doctree
.doctrees/base_examples/: index.doctree  plot_baseclass1.doctree  sg_execution_times.doctree
.doctrees/fitting/: constraints.doctree  introduction.doctree
.doctrees/fitting_examples/: index.doctree  plot_constraints.doctree  sg_execution_times.doctree
.doctrees/getting-started/: installation.doctree  overview.doctree
.doctrees/reference/: base.doctree
.github/workflows/: codeql-analysis.yml  documentation-build.yml  python-ci.yml  python-package.yml  python-publish.yml
Examples/: README.rst
Examples/base/: README.rst  plot_baseclass1.py
Examples/fitting/: plot_constraints.py
_downloads/56625970f94ba0f1ffe83a76b414126d/: plot_constraints.py
_downloads/725462c328f31b1ee5818cf720bab017/: plot_constraints.ipynb
_downloads/e39fe122f61f743f7d0da368dbc3ff7d/: plot_baseclass1.ipynb
_modules/: index.html
_modules/easyscience/Datasets/: xarray.html
_modules/easyscience/Objects/: Groups.html  ObjectClasses.html  Variable.html
_modules/easyscience/fitting/: Constraints.html
_sources/: sg_execution_times.rst
_sources/base_examples/: index.rst  plot_baseclass1.rst  sg_execution_times.rst
_sources/fitting/: constraints.rst
_sources/fitting_examples/: index.rst  plot_constraints.rst  sg_execution_times.rst
base_examples/: index.html  plot_baseclass1.html  sg_execution_times.html
docs/: Makefile  make.bat
docs/src/: conf.py  index.rst
docs/src/fitting/: constraints.rst  introduction.rst
docs/src/getting-started/: installation.rst
docs/src/reference/: base.rst
examples_old/: dimer_example.ipynb  example1.py  example1_dream.py  example2.py  example3.py  example4.py  example5_broken.py  example6_broken.py  example_dataset scipp.ipynb  example_dataset.ipynb  example_dataset.py  example_dataset2.py  example_dataset2pt2.py  example_dataset2pt2_broken.py  example_dataset3.py  example_dataset3pt2.py  example_dataset4.py  example_dataset4_2.py
fitting/: constraints.html  introduction.html
fitting_examples/: index.html  plot_constraints.html  sg_execution_times.html
getting-started/: installation.html  overview.html
notes/: currrent_code.txt  testing.txt
reference/: base.html
resources/scripts/: generate_html.py
src/easyscience/: REDIRECT.py  __init__.py  unit_aliases.py
src/easyscience/Datasets/: xarray.py
src/easyscience/Fitting/: Constraints.py  DFO_LS.py  Fitting.py  __init__.py  bumps.py  fitter.py  fitting_template.py  lmfit.py  multi_fitter.py
src/easyscience/Objects/: Borg.py  Graph.py  Groups.py  Inferface.py  ObjectClasses.py  Variable.py  __init__.py  combo_descriptor.py  core.py  descriptor.py  global_object.py  parameter.py  virtual.py
src/easyscience/Utils/: Exceptions.py  Logging.py  UndoRedo.py  classTools.py  classUtils.py  decorators.py  string.py  typing.py
src/easyscience/fitting/: Constraints.py  __init__.py  available_minimizers.py  fitter.py  multi_fitter.py
tests/: __init__.py  coords.py  package_test.py
tests/integration_tests/: test_undoRedo.py
(+97 files in other folders)
